Footer and buttons height/z-index fix

--- a/src/assets/style/blocks/_loggingIn.scss
+++ b/src/assets/style/blocks/_loggingIn.scss
@@ -1,5 +1,5 @@
 .loggingInContainer {
-  z-index: 1;
+  z-index: 2;
   background-color: $white2;
   position: absolute;
   width: 100%;
