--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -5,7 +5,7 @@
     margin-top: 25px;
 
     .mainBtns {
-      z-index: 10;
+      z-index: 1;
       display: flex;
       justify-content: center;
       button.defbtn.filled
